Fixes many layout issues and add theme toggle slider

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -97,9 +97,14 @@ body.light-mode {
     color: #333;
 }
 
+body.light-mode .theme-toggle .slider {
+    background-color: #333;
+}
 
 header.light-mode,
 footer.light-mode {
+    background-color: #fff;
+    color: #333;
     border-top: 1px solid #ccc;
     border-bottom: 1px solid #ccc;
 }
